# PhysXSimulation

./: .gitignore  CMakeLists.txt  CMakePresets.json
SolarSystem/: CMakeLists.txt  SolarSystem.cpp  SolarSystemMain.cpp  SolarSystemMain.h
SolarSystem/entities/: Planet.h  SolarSystem.cpp  SolarSystem.h
SolarSystem/factory/: SolarSystemFactory.cpp  SolarSystemFactory.h
SolarSystem/graphics/: ModelProvider.cpp  ModelProvider.h  TextureProvider.cpp  TextureProvider.h
SolarSystem/rendering/: Rendering.cpp  Rendering.h
SolarSystem/threading/: CalculateForceTask.hpp
SolarSystem/utils/: time.h  vectorutils.cpp  vectorutils.h
